--- a/hh.html
+++ b/hh.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>hello angular</div>x'x'x
-    <h1>我是用户B打扰一下</h1>
+    <div>你好世界</div>
+    <h1>天堂之门为你而开</h1>
 </body>
 </html>
